examples/goflow2-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: goflow2
  name: goflow2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goflow2
  template:
    metadata:
      labels:
        app: goflow2
    spec:
      volumes:
        - name: config-vol
          configMap:
            name: goflow2-config
      containers:
        - command:
            - /bin/sh
            - -c
            - /goflow2 -loglevel=trace -listen=netflow://:2055 -transport=kafka -transport.kafka.brokers=my-cluster-kafka-brokers.default.svc.cluster.local:9092 -transport.kafka.topic=goflow-kube -transport.kafka.hashing=true -format.hash=TimeReceived,SamplerAddress,SrcAddr,SrcPort,SrcMac,DstAddress,DstPort,DstMac
          image: quay.io/netobserv/goflow2:main
          imagePullPolicy: IfNotPresent
          name: goflow2
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: goflow2
  namespace: default
  labels:
    app: goflow2
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: metrics
    - port: 2055
      protocol: UDP
      name: netflow
  selector:
    app: goflow2
