examples/dex.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: openshift-logging
spec:
  replicas:
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex
      containers:
      - image: ghcr.io/dexidp/dex:v2.30.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        ports:
        - name: web
          containerPort: 5556
        - name: api
          containerPort: 5557
        - name: telemetry
          containerPort: 5558
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        - name: tls
          mountPath: /etc/dex/tls
      volumes:
      - name: config
        configMap:
          name: dex
          items:
          - key: config.yaml
            path: config.yaml
      - name: tls
        secret:
          secretName: dex
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: dex
  name: dex
  namespace: openshift-logging
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 5556
    protocol: TCP
    targetPort: 5556
  - name: api
    port: 5557
    protocol: TCP
    targetPort: 5557
  - name: telemetry
    port: 5558
    protocol: TCP
    targetPort: 5558
  selector:
    app: dex
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dex
  namespace: openshift-logging
spec:
  path: /
  port:
    targetPort: 5556
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: dex
    weight: 100
  wildcardPolicy: None
